# esa-snappy

./: .gitignore  .gitlab-ci-trigger.yml  .gitlab-ci.yml  README.md  pom.xml
src/main/nbm/: manifest.mf
src/main/resources/: README.md  layer.xml
src/main/resources/esa_snappy/: LICENSE  README.md  __init__.py  howto_package_for_pypi.txt  pyproject.toml  setup.py  snappyutil.py
src/main/resources/esa_snappy/esa_snappy/: __init__.py  snappyutil.py
src/main/resources/esa_snappy/esa_snappy/examples/: snappy_bmaths.py  snappy_flh.py  snappy_geo_roi.py  snappy_ndvi.py  snappy_ndvi_with_masks.py  snappy_reader_writer_formats.py  snappy_subset.py  snappy_write_image.py
src/main/resources/esa_snappy/esa_snappy/snapista/: graph.py  operator.py  operatorparams.py
src/main/resources/esa_snappy/esa_snappy/snapista/binning/: aggregator_avg.py  aggregator_avg_outlier.py  aggregator_minmax.py  aggregator_on_max_set.py  aggregator_percentile.py  aggregator_sum.py  binning_band.py  binning_variable.py
src/main/resources/esa_snappy/esa_snappy/snapista/demo/: demo-bandmaths.ipynb  demo-bandmaths_simple.ipynb  demo-binning_new.ipynb  demo.ipynb  snapista-demo-bandmaths.ipynb  snapista-demo-binning.ipynb
src/main/resources/esa_snappy/esa_snappy/snapista/demo/.ipynb_checkpoints/: demo_new-checkpoint.ipynb
src/main/resources/esa_snappy/esa_snappy/snapista/demo/data/: subset_0_of_S3A_OL_1_ERR____20160701T092853_20160701T093053_20170919T102725_0119_006_036______MR1_R_NT_002.nc  subset_1_of_S3A_OL_2_WRR____20210304T082509_20210304T090900_20210609T141823_2631_069_121______MAR_R_NT_003.nc  subset_1_of_S3A_OL_2_WRR____20210308T082053_20210308T090445_20210609T070006_2632_069_178______MAR_R_NT_003.nc
src/main/resources/esa_snappy/esa_snappy/tests/: test_snappy_mem.py  test_snappy_product.py
src/main/resources/esa_snappy/examples/: snappy_bmaths.py  snappy_flh.py  snappy_geo_roi.py  snappy_ndvi.py  snappy_ndvi_with_masks.py  snappy_subset.py  snappy_write_image.py
src/main/resources/esa_snappy/snapista/: graph.py
src/main/resources/esa_snappy/snapista/binning/: aggregator_percentile.py  aggregator_sum.py
src/main/resources/esa_snappy/snapista/demo/: demo-bandmaths_new.ipynb  demo_new.ipynb
src/main/resources/esa_snappy/testconfigs/idea_py310_olafd/: esa_snappy.ini  jdl.cp310-win_amd64.pyd  jpy.cp310-win_amd64.pyd  readme.txt
src/main/resources/esa_snappy/tests/: test_snappy_mem.py  test_snappy_perf.py  test_snappy_product.py
src/main/resources/lib/: jpy-0.10.0.dev1-cp37-cp37m-linux_x86_64.whl  jpy-0.10.0.dev1-cp37-cp37m-win_amd64.whl  jpy-0.10.0.dev1-cp38-cp38-linux_x86_64.whl  jpy-0.10.0.dev1-cp38-cp38-win_amd64.whl  jpy-0.10.0.dev1-cp39-cp39-linux_x86_64.whl  jpy-0.10.0.dev1-cp39-cp39-win_amd64.whl  jpy-0.13.0-cp310-cp310-linux_aarch64.whl  jpy-0.13.0-cp310-cp310-win_amd64.whl  jpy-0.13.0-cp36-cp36m-linux_x86_64.whl  jpy-0.13.0-cp36-cp36m-macosx_10_14_x86_64.whl  jpy-0.13.0-cp37-cp37m-linux_aarch64.whl  jpy-0.13.0-cp37-cp37m-win_amd64.whl  jpy-0.13.0-cp38-cp38-linux_aarch64.whl  jpy-0.13.0-cp38-cp38-linux_x86_64.whl  jpy-0.13.0-cp38-cp38-macosx_12_0_arm64.whl  jpy-0.13.0-cp39-cp39-linux_aarch64.whl  jpy-0.13.0-cp39-cp39-linux_x86_64.whl  jpy-0.13.0-cp39-cp39-macosx_12_0_arm64.whl  jpy-0.13.0-cp39-cp39-win_amd64.whl  jpy-0.9.0-cp37-cp37m-win_amd64.whl  jpy-1.0.0-cp310-cp310-macosx.whl  jpy-1.0.0-cp310-cp310-win_amd64.whl  jpy-1.0.0-cp311-cp311-linux_aarch64.whl  jpy-1.0.0-cp311-cp311-linux_x86_64.whl  jpy-1.0.0-cp311-cp311-macosx.whl  jpy-1.0.0-cp312-cp312-linux_aarch64.whl  jpy-1.0.0-cp312-cp312-macosx.whl  jpy-1.0.0-cp36-cp36m-macosx.whl  (+13 more)
src/test/resources/: graalpy_use_snap_api_test.py  my_test.py  polyglot_basic_test.py  polyglot_test.py
(+90 files in other folders)
