[build-system]
requires = ["setuptools>=59.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esa_snappy"
version = "0.0.11"
authors = [
  { name="Olaf Danne, Norman Fomferra (Brockmann Consult GmbH)" },
]
description = "The Python part of the SNAP Java-Python bridge."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lxml",
    "attrs",
    "requests"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
license = {file = "LICENSE"}

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = [
    "testconfigs"
]

[tool.setuptools.package-data]
#"esa_snappy" = [
#    "testdata/*.*",
#    "testdata/MER_FRS_L1B_SUBSET.data/*.*",
#    "testdata/MER_FRS_L1B_SUBSET.data/tie_point_grids/*.*",
#    "testdata/MER_FRS_L1B_SUBSET.data/vector_data/*.*",
#]
"esa_snappy" = [
    "testdata/**",  # this ensures that whole tree of Dimap test product is packaged
    "lib/jpy*.whl",  # this ensures that jpy whl is packaged
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"