[build-system]
requires = ["setuptools>=59.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esa_snappy"
version = "1.0.4"
authors = [
  { name="Olaf Danne, Norman Fomferra (Brockmann Consult GmbH)" },
]
description = "The Python part of the SNAP Java-Python bridge."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lxml",
    "attrs",
    "requests"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
license = {text = "MIT"}

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = [
    "testconfigs"
]

[tool.setuptools.package-data]
"esa_snappy" = [
    "testdata/**",  # this ensures that whole tree of Dimap test product is packaged
    "lib/jpy*.whl",  # this ensures that jpy whl is packaged
    "snapista/demo/**"  # this ensures that demo notebook folder is packaged
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"